[3/3] settings: Change density on the fly
Change-Id: Ifd036c75f0423c334f8e25aaf6b3229833e779d7

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -33,4 +33,7 @@
         Setting to false will disable Volume Rocker Wake support -->
     <bool name="config_show_volumeRockerWake">true</bool>
 
+    <integer name="lcd_density_max" translatable="false">160</integer>
+    <integer name="lcd_density_min" translatable="false">480</integer>
+
 </resources>
