--- a/res/values/slim_strings.xml
+++ b/res/values/slim_strings.xml
@@ -824,4 +824,16 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
     <string name="quick_pulldown_left">Left</string>
     <string name="quick_pulldown_right">Right</string>
 
+    <!-- Density Changer -->
+    <string name="custom_density_title">Custom lcd density</string>
+    <string name="custom_density">custom</string>
+    <string name="set_custom_density_title">Set custom density</string>
+    <string name="set_custom_density_set">Set</string>
+    <string name="reboot_now">Reboot</string>
+    <string name="dialog_reboot_title">Would you like to reboot?</string>
+    <string name="dialog_reboot_summary">You must reboot to apply new density</string>
+    <string name="custom_density_summary_invalid">"INVALID DENSITY!"</string>
+    <string name="dpi">DPI</string>
+    <string name="current_lcd_density">"Current LCD Density: "</string>
+
 </resources>
