[2/2] Settings: Optional statusbar battery icons
    * Circle battery and circle battery percent (from CM <Sven Dawitz>)
    * Battery bar percent from Google
    * Quicksetting battery tile reflects status icon (from SlimROM <kufikugel>)

    - Option appears under Settings -> Battery -> Status Icon (ActionBar)

Part 1: frameworks_base

Signed-off-by: Anu6is <curtis.mayers@gmail.com>

Change-Id: Iae497e495045ca68522ab0b5bd342e044d4000f3

Conflicts:
	res/values/pa_arrays.xml
	res/values/pa_strings.xml

--- a/res/values/pa_strings.xml
+++ b/res/values/pa_strings.xml
@@ -16,6 +16,7 @@
    limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
     <!--Volume buttons category-->
     <string name="volume_buttons_category">Volume buttons</string>
 
@@ -130,4 +131,11 @@
     <!-- Link volumes -->
     <string name="link_volume_ringtones">Link ringtone &amp; notifications volumes</string>
     <string name="volume_ring_only_description">Ringtone</string>
+
+    <!--Battery Icon selection-->
+    <string name="battery_status_icon_title">Status icon</string>
+    <string name="battery_bar">Battery bar</string>
+    <string name="battery_bar_percent">Battery bar &amp; percent</string>
+    <string name="battery_circle">Battery circle</string>
+    <string name="battery_circle_percent">Battery circle &amp; percent</string>
 </resources>
