--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -82,6 +82,13 @@
         android:icon="@drawable/ic_settings_halo" 
         android:title="@string/halo_settings_title" />
 
+    <!-- Themes -->
+    <header
+        android:id="@+id/theme_settings"
+        android:fragment="com.android.settings.slim.themes.ThemeSettings"
+        android:icon="@drawable/ic_settings_theme"
+        android:title="@string/theme_settings_title" />
+
     <!-- SlimCenter -->
     <header
         android:id="@+id/slim_center"
